--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,15 +1,18 @@
 <div class="pagination" *ngIf="totalPages > 1">
-    <!-- Önceki -->
     <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">
       &laquo; Önceki
     </button>
   
-    <!-- Sayfa numaraları -->
-    <button *ngFor="let page of pages" (click)="changePage(page)" [class.active]="currentPage === page">
-      {{ page }}
-    </button>
+    <button
+    *ngFor="let page of visiblePages"
+    (click)="typeof page === 'number' ? changePage(page) : null"
+    [class.active]="currentPage === page"
+    [disabled]="page === '...'"
+  >
+    {{ page }}
+  </button>
   
-    <!-- Sonraki -->
+  
     <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">
       Sonraki &raquo;
     </button>
